# ziti-sdk-csharp

./: .editorconfig  .gitignore  BUILDING.md  CHANGELOG.md  CHANGELOG.native.md  MIGRATION.md  README.md  Ziti.Core.Examples.sln  Ziti.NET.sln  Ziti.NuGet.sln  Ziti.Samples.sln  bridge-regression-report.md  bucketlist.md  build-native.bat  build.sh  create-dummy-nuget-files.bat  create-nuget-package.bat  dev-build-native.bat  docfx.json  gendoc.bat  native-package-local.nuspec  native-package.nuspec  nuget.config  review-csharp-expert.md  run-petstore.sh  update-nuspec.ps1
.github/workflows/: build-csharp-sdk.yml  ci.yml  cmake.yml  daily-native-publish.yml  dotnet-sdk-publish.yml  mattermost-ziti-webhook.yml  native-auto-update.yml  native-nuget-publish.yml
ConsoleTestAppDotnet5/: ConsoleTestAppDotnet5.csproj  Program.cs
ConsoleTestAppDotnet5/Properties/: launchSettings.json
OpenZiti.Management/: Helper.cs  OpenZiti.Management.csproj  README.md  management.yml
OpenZiti.NET/: OpenZiti.NET.csproj  OpenZiti.NET.nuspec  README.md  Ziti.NET.Standard.nuspec  build.bat  update-nuspec.ps1
OpenZiti.NET.Native/: NuGet.config  OpenZiti.NET.Native.sln  PublishLocalNuGet.ps1  fetchNativeZitiLibs.ps1  getNative.ps1  version.props
OpenZiti.NET.Native/SmokeTest/: NuGet.config  Program.cs  Smoke.csproj
OpenZiti.NET.Samples/: Enrollment.cs  GlobalSuppressions.cs  HostedService.cs  HostedServiceClient.cs  LoggingHandler.cs  OpenZiti.NET.Samples.csproj  Program.cs  README.md  SampleBase.cs  Weather.cs
OpenZiti.NET.Samples.Kestrel/: DelegatedZitiConnectionListenerFactory.cs  Program.cs  README.md  ServiceCollectionExtensions.cs  WeatherForecast.cs  ZitiRestServerCSharp.csproj  ZitiRestServerCSharp.sln
OpenZiti.NET.Samples.Kestrel/Controllers/: MetricItemsController.cs  WeatherForecastController.cs
OpenZiti.NET.Samples.Kestrel/Models/: MetricContext.cs  MetricItem.cs
OpenZiti.NET.Samples.Petstore/: OpenZiti.NET.Samples.Petstore.csproj  README.md
OpenZiti.NET.Samples/Util/: ConsoleHelper.cs
OpenZiti.NET.Samples/setup-scripts/: enrollment.ps1  hosted.ps1
OpenZiti.NET.Samples/src/: Program.cs
OpenZiti.NET.Tests/: AssemblyInfo.cs  DataTests.cs  GlobalSuppressions.cs  Logging.cs  NativeLayout.cs  OpenZiti.NET.Tests.csproj  TestNative.cs
OpenZiti.NET/Properties/: launchSettings.json
OpenZiti.NET/src/: GlobalSuppressions.cs
Samples/: Console.csproj  Enroll.cs  Enrollment.cs  Eth0.cs  HostedService.cs  HostedServiceClient.cs  LoggingHandler.cs  OpenZitiSamples.csproj  Program.cs  Proxy.cs  SampleBase.cs  TcpProxy.cs  Weather.cs  WeatherMFA.cs  WeatherMetrics.cs  WeatherOnOff.cs  WeatherStateChange.cs  WeatherStream.cs  WeatherZitiDump.cs  ZitiListOptions.cs
Samples/MFAUtils/: ZitiCommand.cs  ZitiInstance.cs
Samples/Properties/: launchSettings.json
Samples/Service/: ZitiInstance.cs  ZitiTunnelCommand.cs
Samples/Util/: ConsoleHelper.cs  ZitiCommand.cs  ZitiInstance.cs
Samples/setup-scripts/: enrollment.ps1  hosted.ps1  weather.ps1  ziti-cli-commands-cleanup.txt  ziti-cli-commands.txt
TestProject/: GlobalSuppressions.cs  Program.cs  Readme.md  TestProject.csproj
TestProject/Properties/: launchSettings.json  launchSettings.json.back
Ziti.Core.Console/: Program.cs  Ziti.Core.Console.csproj
Ziti.NET.Standard/: 2019_NF TCL EULA.txt  Ziti.NET.Standard.csproj  Ziti.NET.Standard.nuspec  build.bat  msvc_build.bat
Ziti.NET.Standard.Tests/: UnitTest1.cs  Ziti.NET.Standard.Tests.csproj
Ziti.NET.Standard.Tests/TestAssets/: test-id.json
ZitiNativeApiForDotnetCore/: .gitignore  CMakeLists.txt  CMakeLists.txt.back  CMakePresets.json  README.md  alignments-64bit.txt  compile-all.bat  defgen.bat  generateDotnetStatus.ps1  git.cmake  msvc-build.bat  update-notes.txt  vcpkg.json  ziti-exports.txt  ziti.def
ZitiNativeApiForDotnetCore/cmake_deps/: CMakeLists.txt
ZitiNativeApiForDotnetCore/includes/: ziti4dotnet.h
ZitiNativeApiForDotnetCore/programs/: CMakeLists.txt  zitistructalignment.c
ZitiNativeApiForDotnetCore/toolchains/: Windows-win32.cmake  Windows-x86.cmake  Windows-x86_64.cmake  git.cmake  iOS-arm64.cmake
docfx/: docfx.json  index.md  toc.yml
docs/: index.html  manifest.json  toc.html  xrefmap.yml
docs/docfx/: .manifest  OpenZiti.API.Enrollment.AfterEnroll.yml  OpenZiti.API.Enrollment.yml  OpenZiti.API.yml  OpenZiti.EnumHelper.yml  OpenZiti.GCHandleExtensions.yml  OpenZiti.IdMaterial.yml  OpenZiti.Logging.yml  OpenZiti.Native.API.yml  OpenZiti.Native.NativeHelperFunctions.yml  OpenZiti.Native.OnUVTimer.yml  OpenZiti.Native.log_writer.yml  OpenZiti.Native.tls_context.yml  OpenZiti.Native.yml  OpenZiti.Native.ziti_aq_mfa_cb.yml  OpenZiti.Native.ziti_ar_mfa_cb.yml  OpenZiti.Native.ziti_ar_mfa_status_cb.yml  OpenZiti.Native.ziti_client_cb.yml  OpenZiti.Native.ziti_close_cb.yml  OpenZiti.Native.ziti_conn_cb.yml  OpenZiti.Native.ziti_data_cb.yml  OpenZiti.Native.ziti_enroll_cb.yml  OpenZiti.Native.ziti_enroll_options.yml  OpenZiti.Native.ziti_event_cb.yml  OpenZiti.Native.ziti_identity.yml  OpenZiti.Native.ziti_listen_cb.yml  OpenZiti.Native.ziti_options.yml  OpenZiti.Native.ziti_pq_domain_cb.yml  OpenZiti.Native.ziti_pq_mac_cb.yml  OpenZiti.Native.ziti_pq_os_cb.yml  OpenZiti.Native.ziti_pq_process_cb.yml  OpenZiti.Native.ziti_pr_domain_cb.yml  OpenZiti.Native.ziti_pr_mac_cb.yml  OpenZiti.Native.ziti_pr_os_cb.yml  OpenZiti.Native.ziti_pr_process_cb.yml  OpenZiti.Native.ziti_service.yml  (+39 more)
local-nuget-packages/: README.md
native/: OpenZiti.NET.Native.sln
native/ZitiNativeApiForDotnetCore/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  alignments-32bit.txt  defgen.bat  generateDotnetStatus.ps1  git.cmake  vcpkg.json
native/ZitiNativeApiForDotnetCore/includes/: ziti4dotnet.h
native/ZitiNativeApiForDotnetCore/toolchains/: git.cmake
scripts/: check-and-publish-native.ps1  create-release.ps1  create-tag.ps1  keepalive.sh  publish-managed-nuget.ps1  regenerate-ziti-def.ps1  run-e2e-test.ps1  run-managed-tests.ps1  run-smoke-test.ps1  setup-vcpkg-nuget-cache.ps1  sync-csdk-vcpkg.ps1  sync-vcpkg-cache.ps1
ziti-sdk-c/: .gitignore
(+176 files in other folders)
